--- a/app/src/main/res/layout/item_service_detail_content.xml
+++ b/app/src/main/res/layout/item_service_detail_content.xml
@@ -14,6 +14,7 @@
         android:padding="12dp">
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:gravity="center"
@@ -23,6 +24,7 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:id="@+id/tv_price"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:gravity="center"
