--- a/app/src/main/res/layout/activity_spike.xml
+++ b/app/src/main/res/layout/activity_spike.xml
@@ -13,7 +13,7 @@
         android:layout_height="50dp"
         app:tabIndicatorHeight="0dp"
         android:background="@color/baseColor"
-        app:tabMode="fixed"
+        app:tabMode="scrollable"
         />
 
 
