--- a/app/src/main/res/layout/fragment_find_topic_detail.xml
+++ b/app/src/main/res/layout/fragment_find_topic_detail.xml
@@ -16,9 +16,14 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appbar"
@@ -138,8 +143,8 @@
                 android:layout_height="match_parent">
             </androidx.recyclerview.widget.RecyclerView>
 
-
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
