--- a/app/src/main/res/layout/fragment_goodsdetail.xml
+++ b/app/src/main/res/layout/fragment_goodsdetail.xml
@@ -236,17 +236,18 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_marginLeft="12dp"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/tv_address"
                 android:drawableLeft="@mipmap/icon_address_red"
                 style="@style/base_text_style"
-                android:text="上海市青浦区华徐公路888号3号楼703室"
+                tools:text="上海市青浦区华徐公路888号3号楼703室"
                 android:drawablePadding="5dp"
                 android:lines="1"
                 android:maxLines="1"
                 android:ellipsize="end"
+                android:textSize="12sp"
                 />
 
         </LinearLayout>
@@ -256,6 +257,7 @@
 
 
     <View
+        android:id="@+id/space_address"
         style="@style/base_space"
         android:visibility="gone"
         />
