--- a/app/src/main/res/layout/item_order_goods.xml
+++ b/app/src/main/res/layout/item_order_goods.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white">
+
 <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical">
     <View
         style="@style/line_light"
         />
     <LinearLayout
+        android:id="@+id/ll_goods"
+        android:background="@drawable/touch_bg"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="10dp"
@@ -132,4 +133,3 @@
 </LinearLayout>
 
 
-</RelativeLayout>
