--- a/app/src/main/res/layout/header_mine.xml
+++ b/app/src/main/res/layout/header_mine.xml
@@ -236,7 +236,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             style="@style/base_text_style"
-            android:text="首次服务订单"
+            android:text="单次服务订单"
             android:layout_marginLeft="12dp"
             />
 
@@ -842,92 +842,6 @@
                 android:layout_alignParentRight="true"
                 android:layout_margin="5dp"/>
         </RelativeLayout>
-        <RelativeLayout
-            android:id="@+id/rl_mine_service7"
-            android:layout_width="0dp"
-            android:background="@drawable/touch_bg"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:orientation="vertical"
-                android:gravity="center">
-
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/mine_service7"/>
-
-                <TextView
-                    style="@style/base_text_style"
-                    android:layout_marginTop="5dp"
-                    android:textSize="12sp"
-                    android:text="申请产品供应商"/>
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:background="@drawable/shape_oval_red"
-                android:text="3"
-                android:visibility="gone"
-                android:gravity="center"
-                android:textSize="10sp"
-                android:textColor="@color/white"
-                android:layout_alignParentRight="true"
-                android:layout_margin="5dp"/>
-        </RelativeLayout>
-
-
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:orientation="horizontal">
-        <RelativeLayout
-            android:id="@+id/rl_mine_service8"
-            android:layout_width="0dp"
-            android:background="@drawable/touch_bg"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:orientation="vertical"
-                android:gravity="center">
-
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/mine_service8"/>
-
-                <TextView
-                    style="@style/base_text_style"
-                    android:text="申请劳务用户"
-                    android:textSize="12sp"
-                    android:layout_marginTop="5dp"/>
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:background="@drawable/shape_oval_red"
-                android:text="3"
-                android:visibility="gone"
-                android:gravity="center"
-                android:textSize="10sp"
-                android:textColor="@color/white"
-                android:layout_alignParentRight="true"
-                android:layout_margin="5dp"/>
-        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/rl_mine_service9"
@@ -967,6 +881,20 @@
                 android:layout_alignParentRight="true"
                 android:layout_margin="5dp"/>
         </RelativeLayout>
+
+
+
+
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:orientation="horizontal">
+
         <RelativeLayout
             android:id="@+id/rl_mine_service10"
             android:layout_width="0dp"
@@ -1005,6 +933,86 @@
                 android:layout_alignParentRight="true"
                 android:layout_margin="5dp"/>
         </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_mine_service7"
+            android:layout_width="0dp"
+            android:background="@drawable/touch_bg"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:orientation="vertical"
+                android:gravity="center">
+
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/mine_service7"/>
+
+                <TextView
+                    style="@style/base_text_style"
+                    android:layout_marginTop="5dp"
+                    android:textSize="12sp"
+                    android:text="申请产品供应商"/>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/shape_oval_red"
+                android:text="3"
+                android:visibility="gone"
+                android:gravity="center"
+                android:textSize="10sp"
+                android:textColor="@color/white"
+                android:layout_alignParentRight="true"
+                android:layout_margin="5dp"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rl_mine_service8"
+            android:layout_width="0dp"
+            android:background="@drawable/touch_bg"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:orientation="vertical"
+                android:gravity="center">
+
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/mine_service8"/>
+
+                <TextView
+                    style="@style/base_text_style"
+                    android:text="申请劳务用户"
+                    android:textSize="12sp"
+                    android:layout_marginTop="5dp"/>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/shape_oval_red"
+                android:text="3"
+                android:visibility="gone"
+                android:gravity="center"
+                android:textSize="10sp"
+                android:textColor="@color/white"
+                android:layout_alignParentRight="true"
+                android:layout_margin="5dp"/>
+        </RelativeLayout>
+
+
+
         <RelativeLayout
             android:id="@+id/rl_mine_service11"
             android:layout_width="0dp"
