--- a/app/src/main/res/layout/item_spike_home.xml
+++ b/app/src/main/res/layout/item_spike_home.xml
@@ -32,11 +32,11 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginRight="8dp"
         android:gravity="bottom"
         android:orientation="horizontal">
 
@@ -44,7 +44,8 @@
 
         <TextView
             android:id="@+id/tv_price"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:lines="1"
