--- a/app/src/main/res/layout/pop_bottom_poster.xml
+++ b/app/src/main/res/layout/pop_bottom_poster.xml
@@ -61,7 +61,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:padding="12dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:paddingRight="8dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -74,6 +76,7 @@
                     android:id="@+id/tv_product_name"
                     style="@style/base_text_style"
                     android:lines="2"
+                    android:layout_marginLeft="8dp"
                     tools:text="北海道风味天然酵母面包独立包装270g"
                     />
 
@@ -81,6 +84,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:paddingLeft="4dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -95,8 +99,9 @@
                         android:id="@+id/tv_advance_price"
                         style="@style/base_text_style_gray_small"
                         android:textColor="@color/baseColor"
-                        android:text="免费加入灰姑凉 省钱 赚钱"
+                        android:text="免费加入灰姑娘 省钱 赚钱"
                         android:layout_marginLeft="10dp"
+                        android:textSize="10sp"
                         />
 
                 </LinearLayout>
