--- a/app/src/main/res/layout/header_mine.xml
+++ b/app/src/main/res/layout/header_mine.xml
@@ -1060,6 +1060,8 @@
 
 
     <TextView
+        android:id="@+id/tv_like"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14sp"
