选择地址点击选择出错bug。个人中心点击不能进入bug。搜索页页数显示

--- a/app/src/main/res/layout/fragment_recycleview_search_result.xml
+++ b/app/src/main/res/layout/fragment_recycleview_search_result.xml
@@ -34,6 +34,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv_current_page"
             style="@style/base_text_style"
             android:text="1"
             android:layout_weight="1"
@@ -41,6 +42,7 @@
             android:gravity="bottom"
             />
         <TextView
+            android:id="@+id/tv_total_page"
             style="@style/base_text_style"
             android:text="1"
             android:layout_weight="1"
