--- a/app/src/main/res/layout/activity_withdraw.xml
+++ b/app/src/main/res/layout/activity_withdraw.xml
@@ -21,8 +21,8 @@
         android:layout_height="wrap_content"
         android:background="@null"
         android:hint="输入支付宝账号"
-        android:inputType="number"
-        android:maxLength="11"
+        android:inputType="text"
+        android:lines="1"
         android:paddingBottom="20dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
@@ -82,6 +82,7 @@
             android:hint="0"
             android:inputType="number"
             android:maxLength="5"
+            android:digits="0123456789."
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:textColor="@color/black_title_color"
