--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -90,14 +90,17 @@
         <item name="android:windowExitAnimation">@anim/right_exit_anim</item>
     </style>
 
-    <style name="base_hor_style" >
+    <style name="base_hor_style" parent="@style/base_hor_style_no_click">
+        <item name="android:background">@drawable/touch_bg</item>
+    </style>
+<!--    为了减少渲染-->
+    <style name="base_hor_style_no_click" >
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingLeft">12dp</item>
         <item name="android:paddingRight">12dp</item>
         <item name="android:paddingTop">15dp</item>
         <item name="android:paddingBottom">15dp</item>
-        <item name="android:background">@drawable/touch_bg</item>
         <item name="android:orientation">horizontal</item>
     </style>
 
