--- a/app/src/main/res/layout/header_mine.xml
+++ b/app/src/main/res/layout/header_mine.xml
@@ -227,6 +227,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
+        android:visibility="gone"
         android:orientation="horizontal">
 
         <TextView
@@ -250,6 +251,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="@color/white"
@@ -366,11 +368,13 @@
 
 
     <View
+        android:visibility="gone"
         style="@style/base_space"
         />
 
 
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -397,6 +401,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="@color/white"
@@ -544,6 +549,7 @@
     </LinearLayout>
 
     <View
+        android:visibility="gone"
         style="@style/base_space"
         />
 
@@ -963,45 +969,6 @@
                 android:layout_alignParentRight="true"
                 android:layout_margin="5dp"/>
         </RelativeLayout>
-        <RelativeLayout
-            android:id="@+id/rl_mine_service8"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:orientation="vertical"
-                android:gravity="center">
-
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/mine_service8"/>
-
-                <TextView
-                    style="@style/base_text_style"
-                    android:text="申请劳务用户"
-                    android:textSize="12sp"
-                    android:layout_marginTop="5dp"/>
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:background="@drawable/shape_oval_red"
-                android:text="3"
-                android:visibility="gone"
-                android:gravity="center"
-                android:textSize="10sp"
-                android:textColor="@color/white"
-                android:layout_alignParentRight="true"
-                android:layout_margin="5dp"/>
-        </RelativeLayout>
-
-
 
         <RelativeLayout
             android:id="@+id/rl_mine_service11"
@@ -1040,6 +1007,48 @@
                 android:layout_alignParentRight="true"
                 android:layout_margin="5dp"/>
         </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rl_mine_service8"
+            android:visibility="invisible"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:orientation="vertical"
+                android:gravity="center">
+
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/mine_service8"/>
+
+                <TextView
+                    style="@style/base_text_style"
+                    android:text="申请劳务用户"
+                    android:textSize="12sp"
+                    android:layout_marginTop="5dp"/>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/shape_oval_red"
+                android:text="3"
+                android:visibility="gone"
+                android:gravity="center"
+                android:textSize="10sp"
+                android:textColor="@color/white"
+                android:layout_alignParentRight="true"
+                android:layout_margin="5dp"/>
+        </RelativeLayout>
+
+
+
+
 
 
 
