1：首页解绑注册广播2：monkey测试的guide页面finish()函数bug3：申请更大内存4：店铺详情增加播放视频的功能。

--- a/app/src/main/res/layout/fragment_brand_detail.xml
+++ b/app/src/main/res/layout/fragment_brand_detail.xml
@@ -69,11 +69,13 @@
                            android:layout_marginRight="12dp"
                            android:layout_height="180dp">
                            <ImageView
+                               android:id="@+id/iv_video_image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop"
-                               android:src="@mipmap/demo_brand_vedio"/>
+                               tools:src="@mipmap/demo_brand_vedio"/>
                            <ImageView
+                               android:id="@+id/iv_video_play"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
