--- a/app/src/main/res/layout/fragment_small_vault.xml
+++ b/app/src/main/res/layout/fragment_small_vault.xml
@@ -85,7 +85,7 @@
                             android:gravity="center">
                             <TextView
                                 style="@style/base_text_style"
-                                android:text="消费积分"
+                                android:text="消费"
                                 android:textSize="12sp"
                                 android:textColor="@color/white"
                                 />
@@ -107,7 +107,7 @@
                             android:gravity="center">
                             <TextView
                                 style="@style/base_text_style"
-                                android:text="推荐积分"
+                                android:text="推荐"
                                 android:textSize="12sp"
                                 android:textColor="@color/white"
                                 />
@@ -129,7 +129,30 @@
                             android:gravity="center">
                             <TextView
                                 style="@style/base_text_style"
-                                android:text="月冠积分"
+                                android:text="赠送"
+                                android:textSize="12sp"
+                                android:textColor="@color/white"
+                                />
+                            <TextView
+                                android:id="@+id/tv_score_give"
+                                style="@style/base_text_style"
+                                tools:text="18236"
+                                android:textSize="16sp"
+                                android:layout_marginTop="8dp"
+                                android:textColor="@color/white"
+                                />
+                        </LinearLayout>
+
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:gravity="center">
+                            <TextView
+                                style="@style/base_text_style"
+                                android:text="月冠"
                                 android:textSize="12sp"
                                 android:textColor="@color/white"
                                 />
@@ -183,7 +206,7 @@
                 android:id="@+id/viewpager"
                 android:layout_width="match_parent"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                android:layout_height="match_parent"/>
+                android:layout_height="wrap_content"/>
 
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
