--- a/app/src/main/res/layout/view_filter.xml
+++ b/app/src/main/res/layout/view_filter.xml
@@ -93,4 +93,24 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_shop"
+            style="@style/base_text_style"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:text="店铺"
+            />
+
+
+    </LinearLayout>
+
 </LinearLayout>
