--- a/app/src/main/res/layout/view_filter.xml
+++ b/app/src/main/res/layout/view_filter.xml
@@ -93,24 +93,16 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tv_shop"
+        android:visibility="gone"
+        style="@style/base_text_style"
         android:layout_width="0dp"
         android:layout_weight="1"
-        android:gravity="center"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_shop"
-            style="@style/base_text_style"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:text="店铺"
-            />
-
-
-    </LinearLayout>
+        android:gravity="center"
+        android:textStyle="bold"
+        android:text="店铺"
+        />
 
 </LinearLayout>
